--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -61,7 +61,7 @@ blurb-btn-name: know more
 work-process:
   - title : "Competencies"
     icon : "assets/images/icons/competence.png"
-    content : "Complex Problem Solving<br>Conceptual and Analytical Thinking<br>Teamwork and Cooperation<br>Willingness to Learn<br>Strong Work Ethic<br>Responsability<br>Creativity<br>Flexibility<br>"
+    content : "Complex Problem Solving<br>Conceptual and Analytical Thinking<br>Teamwork and Cooperation<br>Willingness to Learn<br>Strong Work Ethic<br>Responsability<br>Flexibility<br>Creativity<br>"
     
   - title : "Personality"
     icon : "assets/images/icons/personality.png"
