--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -49,7 +49,7 @@ social:
 
 # About Section
 blurb:
-  A highly disciplined and fervent junior data scientist/research engineer who uses data to solve problems and uncover precious insights for data-driven decision-making. A lifelong learner who constantly pursues new knowledge and goes out of his comfort zone. With a solid quantitative background, I am
+  A highly disciplined and fervent junior data scientist/research engineer who uses data to solve problems and uncover precious insights for data-driven decision-making. A lifelong learner who constantly pursues new knowledge and goes out of his comfort zone. With a...
 
 blurb-btn-link: '/about'
 blurb-btn-name: know more
