--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -36,7 +36,7 @@ disqus-identifier: # Add your shortname for Disqus Comment. For example mr-brown
 # Hero Section
 
 hero:
-  hero-title: Hi! I’m <br> Anh Vu <br> Junior Data Scientist
+  hero-title: Hi! I’m <br> Anh Vu <br> Junior Data Scientist / Machine Learning Engineer
 
 social:
 - {icon: "ti-linkedin", link: "https://www.linkedin.com/in/anh-vu-nguyen-56102a1b2/"}
@@ -49,7 +49,7 @@ social:
 
 # About Section
 blurb:
-  A highly disciplined and fervent junior data scientist/research engineer who uses data to solve problems and uncover precious insights for data-driven decision-making. A lifelong learner who constantly pursues new knowledge and goes out of his comfort zone. With a...
+  A highly disciplined and fervent junior data scientist/machine learning engineer who uses data to solve problems and uncover precious insights for data-driven decision-making. A lifelong learner who constantly pursues new knowledge and goes out of his comfort zone. With a...
 
 blurb-btn-link: '/about'
 blurb-btn-name: know more
