--- a/_data/settings.old.yml
+++ b/_data/settings.old.yml
@@ -8,7 +8,7 @@ description: Anh Vu Nguyen's Portfolio website
 email: anhvunguyen.contact@gmail.com
 phone: 
 address: Adelaide (5000), Australia
-copyright: Updated February 2023, Copyright &copy; Designed by [Themefisher](https://github.com/themefisher/kross-jekyll) & developed by [Getjekyllthemes](https://getjekyllthemes.com) & modified by [Anh Vu Nguyen](https://www.linkedin.com/in/anh-vu-nguyen-56102a1b2/)<br>Icons made by <a href="https://www.flaticon.com/authors/noomtah" title="noomtah">noomtah</a>, <a href="https://www.flaticon.com/authors/juicy-fish" title="juicy_fish">juicy_fish</a>, <a href="https://www.flaticon.com/authors/backwoods" title="Backwoods">Backwoods</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+copyright: Updated August 2022, Copyright &copy; Designed by [Themefisher](https://github.com/themefisher/kross-jekyll) & developed by [Getjekyllthemes](https://getjekyllthemes.com) & modified by [Anh Vu Nguyen](https://www.linkedin.com/in/anh-vu-nguyen-56102a1b2/)<br>Icons made by <a href="https://www.flaticon.com/authors/noomtah" title="noomtah">noomtah</a>, <a href="https://www.flaticon.com/authors/juicy-fish" title="juicy_fish">juicy_fish</a>, <a href="https://www.flaticon.com/authors/backwoods" title="Backwoods">Backwoods</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
 
 menu:
 - {name: About, link: '/about'}
@@ -36,7 +36,7 @@ disqus-identifier: # Add your shortname for Disqus Comment. For example mr-brown
 # Hero Section
 
 hero:
-  hero-title: Hi! I’m <br> Anh Vu <br> Ph.D. Candidate in Artificial Intelligence at The Australian Institute for Machine Learning and The University of Adelaide
+  hero-title: Hi! I’m <br> Anh Vu <br> Junior Machine Learning Engineer / Research Engineer
 
 social:
 - {icon: "ti-linkedin", link: "https://www.linkedin.com/in/anh-vu-nguyen-56102a1b2/"}
@@ -49,7 +49,7 @@ social:
 
 # About Section
 blurb:
-  A highly disciplined and fervent Ph.D. candidate who uses data to solve problems and uncover precious insights for data-driven decision-making. A lifelong learner who constantly pursues new knowledge and goes out of his comfort zone. With a...
+  A highly disciplined and fervent junior machine learning engineer/research engineer who uses data to solve problems and uncover precious insights for data-driven decision-making. A lifelong learner who constantly pursues new knowledge and goes out of his comfort zone. With a...
 
 blurb-btn-link: '/about'
 blurb-btn-name: know more
@@ -103,8 +103,7 @@ experience:
 
 education-title: Education
 education:
-- {name: 'Doctor of Philosophy in Artificial Intelligence', date: '2022 - present', organization: 'The University of Adelaide, The Australian Institute for Machine Learning (Australia)'}
-- {name: 'Graduate Certificate in Artificial Intelligence and Machine Learning', date: '2022 - 2022', organization: 'The University of Adelaide (Australia)'}
+- {name: 'Graduate Certificate in Artificial Intelligence and Machine Learning', date: '2022 - present', organization: 'The University of Adelaide (Australia)'}
 - {name: 'Master in Electronics, Electrical Energy & Automation - Specialised in Signal & Image Processing', date: '2019 - 2021', organization: 'University of Rennes 1 (France), graduated with Mention Très Bien (equiv. Summa Cum Laude)'}
 - {name: 'Bachelor in Electronics, Electrical Energy & Automation', date: '2016 - 2019', organization: 'University of Rennes 1 (France), graduated with Mention Très Bien (equiv. Summa Cum Laude)'}
 
@@ -310,9 +309,6 @@ testimonial-items:
 # Client Slider Section
 client-slider-items:
 
-  - logo: "assets/images/clients-logo/client-logo-7.png"
-    url: "https://www.adelaide.edu.au/aiml/"
-
   - logo: "assets/images/clients-logo/client-logo-6.png"
     url: "https://www.adelaide.edu.au/"
 
@@ -330,9 +326,6 @@ client-slider-items:
     
   - logo: "assets/images/clients-logo/client-logo-5.png"
     url: "https://play.google.com/store/apps/details?id=com.lovenador.ninerelax&hl=en&gl=US"
-    
-  - logo: "assets/images/clients-logo/client-logo-7.png"
-    url: "https://www.adelaide.edu.au/aiml/"
     
   - logo: "assets/images/clients-logo/client-logo-6.png"
     url: "https://www.adelaide.edu.au/"
@@ -356,4 +349,4 @@ client-slider-items:
 # Contact Section
 
 contact-title: Contact Info
-contact-email: anhvunguyen.contact@gmail.com, anhvu.nguyen@adelaide.edu.au
+contact-email: anhvunguyen.contact@gmail.com
